[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/round.png" type="Texture" id=1]
[ext_resource path="res://attacks/Field.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 75.0

[node name="Field" type="Area2D"]
monitorable = false
script = ExtResource( 2 )

[node name="AttackArea" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.8125, 0.8125 )
z_index = -5
texture = ExtResource( 1 )

[node name="CooldownTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_Field_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Field_body_exited"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
